--- a/BumbleBee.csproj
+++ b/BumbleBee.csproj
@@ -25,8 +25,14 @@
     <Reference Include="OFT.Rendering">
       <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\OFT.Rendering.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore">
+      <HintPath>..\..\..\..\..\Windows\WinSxS\x86_presentationcore_31bf3856ad364e35_10.0.19200.884_none_7b770c589ff732d5\PresentationCore.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing.Common">
       <HintPath>..\..\..\..\..\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\PublicAssemblies\System.Drawing.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Utils.Common">
+      <HintPath>..\ATASBuySell\bin\Debug\net7.0\Utils.Common.dll</HintPath>
     </Reference>
     <Reference Include="Utils.Windows">
       <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\Utils.Windows.dll</HintPath>
