--- a/BumbleBee.csproj
+++ b/BumbleBee.csproj
@@ -6,12 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="call c:\temp\copy_bee.bat" />
+  </Target>
+
   <ItemGroup>
     <Reference Include="ATAS.DataFeedsCore">
       <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\ATAS.DataFeedsCore.dll</HintPath>
     </Reference>
     <Reference Include="ATAS.Indicators">
       <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\ATAS.Indicators.dll</HintPath>
+    </Reference>
+    <Reference Include="ATAS.Indicators.Other">
+      <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\ATAS.Indicators.Other.dll</HintPath>
     </Reference>
     <Reference Include="ATAS.Indicators.Technical">
       <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\ATAS.Indicators.Technical.dll</HintPath>
@@ -22,25 +29,21 @@
     <Reference Include="OFT.Attributes">
       <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\OFT.Attributes.dll</HintPath>
     </Reference>
+    <Reference Include="OFT.Localization">
+      <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\OFT.Localization.dll</HintPath>
+    </Reference>
     <Reference Include="OFT.Rendering">
       <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\OFT.Rendering.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore">
-      <HintPath>..\..\..\..\..\Windows\WinSxS\x86_presentationcore_31bf3856ad364e35_10.0.19200.884_none_7b770c589ff732d5\PresentationCore.dll</HintPath>
+      <HintPath>..\..\..\..\..\Windows\Microsoft.NET\Framework64\v4.0.30319\WPF\PresentationCore.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing.Common">
       <HintPath>..\..\..\..\..\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\PublicAssemblies\System.Drawing.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Utils.Common">
-      <HintPath>..\ATASBuySell\bin\Debug\net7.0\Utils.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Utils.Windows">
-      <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\Utils.Windows.dll</HintPath>
+    <Reference Include="System.ServiceModel">
+      <HintPath>..\..\..\..\..\Program Files (x86)\ATAS Platform\System.ServiceModel.dll</HintPath>
     </Reference>
   </ItemGroup>
-
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="call c:\temp\copy_bee.bat" />
-  </Target>
 
 </Project>
